aule/generated/idlParser.py
# Generated from idl.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class idlParser ( Parser ):

    grammarFileName = "idl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'`'", "'<:'", "'{'", "'}'", 
                     "';'", "':'", "'='", "<INVALID>", "'|'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "SPACE", "LINE_COMMENT", "ABSTRACT", 
                      "INTERFACE", "ENUM", "BACKTICK", "INHERITANCE_SYMBOL", 
                      "CURVE_BRACKET_OPEN", "CURVE_BRACKET_CLOSE", "SEMI_SYMBOL", 
                      "COLON_SYMBOL", "EQUALS_SYMBOL", "CONST", "PIPE_SYMBOL", 
                      "PRIVATE", "PROTECTED", "PUBLIC", "STATIC", "COMMA_SYMBOL", 
                      "SQUARE_BRACKET_OPEN", "SQUARE_BRACKET_CLOSE", "STR_TYPE", 
                      "INT_TYPE", "FLOAT_TYPE", "BOOL_TYPE", "VOID_TYPE", 
                      "NULL_TYPE", "ANY_TYPE", "ID", "STRING_VALUE", "ERROR" ]

    RULE_root = 0
    RULE_statement = 1
    RULE_interface_statement = 2
    RULE_enum_statement = 3
    RULE_enum_member = 4
    RULE_interface_header = 5
    RULE_interface_annotation = 6
    RULE_interface_inheritance = 7
    RULE_interface_body = 8
    RULE_field_statement = 9
    RULE_field_body = 10
    RULE_element_type = 11
    RULE_array_type = 12
    RULE_interface_name = 13
    RULE_type_name = 14
    RULE_enum_name = 15
    RULE_field_name = 16
    RULE_tag_string = 17
    RULE_tag = 18
    RULE_simple_type = 19
    RULE_literal_value = 20

    ruleNames =  [ "root", "statement", "interface_statement", "enum_statement", 
                   "enum_member", "interface_header", "interface_annotation", 
                   "interface_inheritance", "interface_body", "field_statement", 
                   "field_body", "element_type", "array_type", "interface_name", 
                   "type_name", "enum_name", "field_name", "tag_string", 
                   "tag", "simple_type", "literal_value" ]

    EOF = Token.EOF
    SPACE=1
    LINE_COMMENT=2
    ABSTRACT=3
    INTERFACE=4
    ENUM=5
    BACKTICK=6
    INHERITANCE_SYMBOL=7
    CURVE_BRACKET_OPEN=8
    CURVE_BRACKET_CLOSE=9
    SEMI_SYMBOL=10
    COLON_SYMBOL=11
    EQUALS_SYMBOL=12
    CONST=13
    PIPE_SYMBOL=14
    PRIVATE=15
    PROTECTED=16
    PUBLIC=17
    STATIC=18
    COMMA_SYMBOL=19
    SQUARE_BRACKET_OPEN=20
    SQUARE_BRACKET_CLOSE=21
    STR_TYPE=22
    INT_TYPE=23
    FLOAT_TYPE=24
    BOOL_TYPE=25
    VOID_TYPE=26
    NULL_TYPE=27
    ANY_TYPE=28
    ID=29
    STRING_VALUE=30
    ERROR=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(idlParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idlParser.StatementContext)
            else:
                return self.getTypedRuleContext(idlParser.StatementContext,i)


        def getRuleIndex(self):
            return idlParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = idlParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.statement()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << idlParser.INTERFACE) | (1 << idlParser.ENUM) | (1 << idlParser.SQUARE_BRACKET_OPEN))) != 0)):
                    break

            self.state = 47
            self.match(idlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interface_statement(self):
            return self.getTypedRuleContext(idlParser.Interface_statementContext,0)


        def enum_statement(self):
            return self.getTypedRuleContext(idlParser.Enum_statementContext,0)


        def getRuleIndex(self):
            return idlParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = idlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [idlParser.INTERFACE, idlParser.SQUARE_BRACKET_OPEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.interface_statement()
                pass
            elif token in [idlParser.ENUM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.enum_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Interface_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interface_header(self):
            return self.getTypedRuleContext(idlParser.Interface_headerContext,0)


        def interface_body(self):
            return self.getTypedRuleContext(idlParser.Interface_bodyContext,0)


        def getRuleIndex(self):
            return idlParser.RULE_interface_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_statement" ):
                listener.enterInterface_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_statement" ):
                listener.exitInterface_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_statement" ):
                return visitor.visitInterface_statement(self)
            else:
                return visitor.visitChildren(self)




    def interface_statement(self):

        localctx = idlParser.Interface_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_interface_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.interface_header()
            self.state = 54
            self.interface_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Enum_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Enum_nameContext

        def ENUM(self):
            return self.getToken(idlParser.ENUM, 0)

        def CURVE_BRACKET_OPEN(self):
            return self.getToken(idlParser.CURVE_BRACKET_OPEN, 0)

        def CURVE_BRACKET_CLOSE(self):
            return self.getToken(idlParser.CURVE_BRACKET_CLOSE, 0)

        def enum_name(self):
            return self.getTypedRuleContext(idlParser.Enum_nameContext,0)


        def enum_member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idlParser.Enum_memberContext)
            else:
                return self.getTypedRuleContext(idlParser.Enum_memberContext,i)


        def getRuleIndex(self):
            return idlParser.RULE_enum_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_statement" ):
                listener.enterEnum_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_statement" ):
                listener.exitEnum_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_statement" ):
                return visitor.visitEnum_statement(self)
            else:
                return visitor.visitChildren(self)




    def enum_statement(self):

        localctx = idlParser.Enum_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_enum_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(idlParser.ENUM)
            self.state = 57
            localctx.name = self.enum_name()
            self.state = 58
            self.match(idlParser.CURVE_BRACKET_OPEN)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.enum_member()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << idlParser.ENUM) | (1 << idlParser.STR_TYPE) | (1 << idlParser.INT_TYPE) | (1 << idlParser.FLOAT_TYPE) | (1 << idlParser.BOOL_TYPE) | (1 << idlParser.VOID_TYPE) | (1 << idlParser.NULL_TYPE) | (1 << idlParser.ANY_TYPE) | (1 << idlParser.ID))) != 0)):
                    break

            self.state = 64
            self.match(idlParser.CURVE_BRACKET_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Enum_memberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def EQUALS_SYMBOL(self):
            return self.getToken(idlParser.EQUALS_SYMBOL, 0)

        def literal_value(self):
            return self.getTypedRuleContext(idlParser.Literal_valueContext,0)


        def SEMI_SYMBOL(self):
            return self.getToken(idlParser.SEMI_SYMBOL, 0)

        def ID(self):
            return self.getToken(idlParser.ID, 0)

        def ANY_TYPE(self):
            return self.getToken(idlParser.ANY_TYPE, 0)

        def INT_TYPE(self):
            return self.getToken(idlParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(idlParser.FLOAT_TYPE, 0)

        def STR_TYPE(self):
            return self.getToken(idlParser.STR_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(idlParser.BOOL_TYPE, 0)

        def VOID_TYPE(self):
            return self.getToken(idlParser.VOID_TYPE, 0)

        def NULL_TYPE(self):
            return self.getToken(idlParser.NULL_TYPE, 0)

        def ENUM(self):
            return self.getToken(idlParser.ENUM, 0)

        def getRuleIndex(self):
            return idlParser.RULE_enum_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_member" ):
                listener.enterEnum_member(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_member" ):
                listener.exitEnum_member(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_member" ):
                return visitor.visitEnum_member(self)
            else:
                return visitor.visitChildren(self)




    def enum_member(self):

        localctx = idlParser.Enum_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enum_member)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            localctx.name = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << idlParser.ENUM) | (1 << idlParser.STR_TYPE) | (1 << idlParser.INT_TYPE) | (1 << idlParser.FLOAT_TYPE) | (1 << idlParser.BOOL_TYPE) | (1 << idlParser.VOID_TYPE) | (1 << idlParser.NULL_TYPE) | (1 << idlParser.ANY_TYPE) | (1 << idlParser.ID))) != 0)):
                localctx.name = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 67
            self.match(idlParser.EQUALS_SYMBOL)
            self.state = 68
            self.literal_value()
            self.state = 69
            self.match(idlParser.SEMI_SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Interface_headerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Interface_nameContext

        def INTERFACE(self):
            return self.getToken(idlParser.INTERFACE, 0)

        def interface_name(self):
            return self.getTypedRuleContext(idlParser.Interface_nameContext,0)


        def interface_annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idlParser.Interface_annotationContext)
            else:
                return self.getTypedRuleContext(idlParser.Interface_annotationContext,i)


        def interface_inheritance(self):
            return self.getTypedRuleContext(idlParser.Interface_inheritanceContext,0)


        def getRuleIndex(self):
            return idlParser.RULE_interface_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_header" ):
                listener.enterInterface_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_header" ):
                listener.exitInterface_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_header" ):
                return visitor.visitInterface_header(self)
            else:
                return visitor.visitChildren(self)




    def interface_header(self):

        localctx = idlParser.Interface_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_interface_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==idlParser.SQUARE_BRACKET_OPEN:
                self.state = 71
                self.interface_annotation()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(idlParser.INTERFACE)
            self.state = 78
            localctx.name = self.interface_name()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.INHERITANCE_SYMBOL:
                self.state = 79
                self.interface_inheritance()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Interface_annotationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SQUARE_BRACKET_OPEN(self):
            return self.getToken(idlParser.SQUARE_BRACKET_OPEN, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(idlParser.ID)
            else:
                return self.getToken(idlParser.ID, i)

        def SQUARE_BRACKET_CLOSE(self):
            return self.getToken(idlParser.SQUARE_BRACKET_CLOSE, 0)

        def EQUALS_SYMBOL(self):
            return self.getToken(idlParser.EQUALS_SYMBOL, 0)

        def getRuleIndex(self):
            return idlParser.RULE_interface_annotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_annotation" ):
                listener.enterInterface_annotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_annotation" ):
                listener.exitInterface_annotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_annotation" ):
                return visitor.visitInterface_annotation(self)
            else:
                return visitor.visitChildren(self)




    def interface_annotation(self):

        localctx = idlParser.Interface_annotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_interface_annotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(idlParser.SQUARE_BRACKET_OPEN)
            self.state = 83
            self.match(idlParser.ID)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.EQUALS_SYMBOL:
                self.state = 84
                self.match(idlParser.EQUALS_SYMBOL)
                self.state = 85
                self.match(idlParser.ID)


            self.state = 88
            self.match(idlParser.SQUARE_BRACKET_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Interface_inheritanceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERITANCE_SYMBOL(self):
            return self.getToken(idlParser.INHERITANCE_SYMBOL, 0)

        def interface_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idlParser.Interface_nameContext)
            else:
                return self.getTypedRuleContext(idlParser.Interface_nameContext,i)


        def COMMA_SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(idlParser.COMMA_SYMBOL)
            else:
                return self.getToken(idlParser.COMMA_SYMBOL, i)

        def getRuleIndex(self):
            return idlParser.RULE_interface_inheritance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_inheritance" ):
                listener.enterInterface_inheritance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_inheritance" ):
                listener.exitInterface_inheritance(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_inheritance" ):
                return visitor.visitInterface_inheritance(self)
            else:
                return visitor.visitChildren(self)




    def interface_inheritance(self):

        localctx = idlParser.Interface_inheritanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_interface_inheritance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(idlParser.INHERITANCE_SYMBOL)
            self.state = 91
            self.interface_name()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==idlParser.COMMA_SYMBOL:
                self.state = 92
                self.match(idlParser.COMMA_SYMBOL)
                self.state = 93
                self.interface_name()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Interface_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CURVE_BRACKET_OPEN(self):
            return self.getToken(idlParser.CURVE_BRACKET_OPEN, 0)

        def CURVE_BRACKET_CLOSE(self):
            return self.getToken(idlParser.CURVE_BRACKET_CLOSE, 0)

        def field_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idlParser.Field_statementContext)
            else:
                return self.getTypedRuleContext(idlParser.Field_statementContext,i)


        def getRuleIndex(self):
            return idlParser.RULE_interface_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_body" ):
                listener.enterInterface_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_body" ):
                listener.exitInterface_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_body" ):
                return visitor.visitInterface_body(self)
            else:
                return visitor.visitChildren(self)




    def interface_body(self):

        localctx = idlParser.Interface_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_interface_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(idlParser.CURVE_BRACKET_OPEN)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << idlParser.ABSTRACT) | (1 << idlParser.CONST) | (1 << idlParser.PRIVATE) | (1 << idlParser.PROTECTED) | (1 << idlParser.PUBLIC) | (1 << idlParser.STATIC) | (1 << idlParser.ID))) != 0):
                self.state = 100
                self.field_statement()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(idlParser.CURVE_BRACKET_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Field_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Field_nameContext

        def SEMI_SYMBOL(self):
            return self.getToken(idlParser.SEMI_SYMBOL, 0)

        def field_name(self):
            return self.getTypedRuleContext(idlParser.Field_nameContext,0)


        def ABSTRACT(self):
            return self.getToken(idlParser.ABSTRACT, 0)

        def PRIVATE(self):
            return self.getToken(idlParser.PRIVATE, 0)

        def PUBLIC(self):
            return self.getToken(idlParser.PUBLIC, 0)

        def CONST(self):
            return self.getToken(idlParser.CONST, 0)

        def STATIC(self):
            return self.getToken(idlParser.STATIC, 0)

        def PROTECTED(self):
            return self.getToken(idlParser.PROTECTED, 0)

        def COLON_SYMBOL(self):
            return self.getToken(idlParser.COLON_SYMBOL, 0)

        def field_body(self):
            return self.getTypedRuleContext(idlParser.Field_bodyContext,0)


        def tag_string(self):
            return self.getTypedRuleContext(idlParser.Tag_stringContext,0)


        def getRuleIndex(self):
            return idlParser.RULE_field_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_statement" ):
                listener.enterField_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_statement" ):
                listener.exitField_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_statement" ):
                return visitor.visitField_statement(self)
            else:
                return visitor.visitChildren(self)




    def field_statement(self):

        localctx = idlParser.Field_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_field_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.ABSTRACT:
                self.state = 108
                self.match(idlParser.ABSTRACT)


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.PRIVATE:
                self.state = 111
                self.match(idlParser.PRIVATE)


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.PUBLIC:
                self.state = 114
                self.match(idlParser.PUBLIC)


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.CONST:
                self.state = 117
                self.match(idlParser.CONST)


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.STATIC:
                self.state = 120
                self.match(idlParser.STATIC)


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.PROTECTED:
                self.state = 123
                self.match(idlParser.PROTECTED)


            self.state = 126
            localctx.name = self.field_name()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.COLON_SYMBOL:
                self.state = 127
                self.match(idlParser.COLON_SYMBOL)
                self.state = 128
                self.field_body()


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==idlParser.BACKTICK:
                self.state = 131
                self.tag_string()


            self.state = 134
            self.match(idlParser.SEMI_SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Field_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idlParser.Element_typeContext)
            else:
                return self.getTypedRuleContext(idlParser.Element_typeContext,i)


        def PIPE_SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(idlParser.PIPE_SYMBOL)
            else:
                return self.getToken(idlParser.PIPE_SYMBOL, i)

        def literal_value(self):
            return self.getTypedRuleContext(idlParser.Literal_valueContext,0)


        def getRuleIndex(self):
            return idlParser.RULE_field_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_body" ):
                listener.enterField_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_body" ):
                listener.exitField_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_body" ):
                return visitor.visitField_body(self)
            else:
                return visitor.visitChildren(self)




    def field_body(self):
